--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@react-icons/all-files": "^4.1.0",
@@ -14,10 +15,13 @@
     "material-ui-popup-state": "^5.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
