--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.1.3",
     "@mui/icons-material": "^6.4.4",
-    "@mui/material": "^6.4.4",
+    "@mui/material": "^6.4.8",
     "@react-icons/all-files": "^4.1.0",
+    "@shadcn/ui": "^0.0.4",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
     "i18next": "^24.2.2",
     "material-ui-popup-state": "^5.3.3",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
@@ -21,6 +24,9 @@
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
+    "shadcn": "^2.4.0-canary.17",
+    "tailwindcss": "^4.0.15",
+    "vite": "^6.2.2",
     "yup": "^1.6.1"
   },
   "scripts": {
