--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-icons/all-files": "^4.1.0",
     "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
+    "classnames": "^2.5.1",
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
     "i18next": "^24.2.2",
@@ -18,9 +19,11 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.54.2",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-input-mask": "^2.0.4",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
