--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.3.1",
     "i18next": "^24.2.2",
     "material-ui-popup-state": "^5.3.3",
+    "node-modules": "^1.0.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
