--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^7.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^4.1.3",
@@ -10,13 +11,16 @@
     "@mui/material": "^6.4.8",
     "@react-icons/all-files": "^4.1.0",
     "@shadcn/ui": "^0.0.4",
+    "axios": "^1.13.2",
     "bootstrap": "^5.3.3",
+    "buffer": "^6.0.3",
     "classnames": "^2.5.1",
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
     "i18next": "^24.2.2",
     "material-ui-popup-state": "^5.3.3",
     "node-modules": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
@@ -57,5 +61,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "assert": "^2.1.0",
+    "crypto-browserify": "^3.12.1",
+    "https-browserify": "^1.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
+    "webpack": "^5.103.0",
+    "webpack-cli": "^6.0.1"
   }
 }
