--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
     "react-input-mask": "^2.0.4",
+    "react-medium-image-zoom": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
