--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "cra-template": "1.2.0",
     "firebase": "^11.3.1",
     "i18next": "^24.2.2",
+    "input": "^1.0.1",
     "material-ui-popup-state": "^5.3.3",
     "node-modules": "^1.0.1",
     "process": "^0.11.10",
